--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ jobs:
       - run: echo "Start Unit Test"
       - uses: actions/checkout@v3
       - name: Setup JDK 11
-      - uses: actions/setup-java@v3
+        uses: actions/setup-java@v3
         with:
           java-version: 11
           distribution: 'adopt'
