--- a/.dev.env
+++ b/.dev.env
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://postgresql2:5432/db_mini
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=098765xy
