--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -80,7 +80,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
             docker stop mini-project mini-project-coverage
-            docker rmi -f dimsen0/mini-project:latest dimsen0/mini-project-coverage:latest
+            docker rmi dimsen0/mini-project:latest dimsen0/mini-project-coverage:latest
             docker pull dimsen0/mini-project:latest
             docker pull dimsen0/mini-project-coverage:latest
             docker run -d --rm --name mini-project-coverage -p 8000:80 dimsen0/mini-project-coverage:latest
