--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+
+dimsen.app.jwtSecret=dimsenSecretKey
+dimsen.app.jwtExpirationMs=360000
