--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 spring.security.user.name=admin
 spring.security.user.password=6e8962d6-189d-4880-8084-c20666021a24
 
@@ -16,4 +18,4 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+dimsen.app.jwtExpirationMs= 86400000
