--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -89,5 +89,5 @@ jobs:
             docker rmi dimsen0/mini-project:latest dimsen0/mini-project-coverage:latest
             docker pull dimsen0/mini-project:latest
             docker pull dimsen0/mini-project-coverage:latest
-            docker run -d --rm --name mini-project-coverage -p 8000:80 dimsen0/mini-project-coverage:latest
-            docker run -d --rm --name mini_project -p 80:8080 --env-file=.dev.env --network actions_network dimsen0/mini-project:latest
+            docker run -d  --name mini-project-coverage -p 8000:80 dimsen0/mini-project-coverage:latest
+            docker run -d  --name mini_project -p 80:8080 --env-file=.dev.env --network actions_network dimsen0/mini-project:latest
